@@ -3,13 +3,11 @@
 -XX:InitialRAMPercentage=80
 -XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
--XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:HeapDumpPath=/var/log/trino/heapdump.bin
 -XX:+ExitOnOutOfMemoryError
 -Djdk.attach.allowAttachSelf=true
--XX:-UseBiasedLocking
 -XX:ReservedCodeCacheSize=512M
 -Dfile.encoding=UTF-8
 -Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider
